seperate code line file from codelines.js

--- a/resume/github-code.html
+++ b/resume/github-code.html
@@ -4,12 +4,13 @@
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.bundle.js"></script>
+        <script type="text/javascript" src="codeline_data.js"></script>
         <script type="text/javascript" src="codelines.js"></script>
         <title>Haijun Deng's code on github</title>
     </head>
     <body onload="load()">
         <h3 align="center">lines of Haijun Deng's code on github by language </h3>
-        <h5 align="center">comments and blank lines <i>NOT</i> included</h5>
+        <h5 align="center" id="totalLines">_totallines_ lines of code in total, comments and blank lines <i>NOT</i> included, some languages not listed</h5>
         <h5 align="center"><a href="resume.html">Back to resume</a></h5>
         <canvas id="codelines"></canvas>
     </body>
