--- a/resume/resume.html
+++ b/resume/resume.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
     	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+        <script type="text/javascript" src="codeline_data.js"></script>
+        <script type="text/javascript" src="resume.js"></script>
         <title>Haijun Deng's resume</title>
     </head>
-    <body>
+    <body onload="load()">
         <div id="doc2" class="yui-t7">
         	<div id="inner">
         		<div id="hd">
@@ -135,7 +137,7 @@
         						<div class="yui-u">
                                     <h4>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></h4>
                                     <h4>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></h4>
-                                    <h4>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h4>
+                                    <h4>Repositories on Github, over <a href="github-code.html" id="github">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h4>
                                     <h4>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></h4>
                                     <h4>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h4>
         						</div>
