--- a/resume/简历.html
+++ b/resume/简历.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
     	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+        <script type="text/javascript" src="codeline_data.js"></script>
+        <script type="text/javascript" src="resume.js"></script>
         <title>Haijun Deng's resume</title>
     </head>
-    <body>
+    <body onload="load()">
         <div id="doc2" class="yui-t7">
         	<div id="inner">
         		<div id="hd">
@@ -135,7 +137,7 @@
         						<div class="yui-u">
                                     <h4>SPOJ （C语言及算法） 最高排名 500+，现排名800+（总人数约5万人），可参见  <a href="http://www.spoj.com/users/denghj1979/">链接</a></h4>
                                     <h4>Codewars （python语言及算法）3 阶 – 胜任、能干，现排名 1600+，可参见 <a href="http://www.codewars.com/users/hbdhj">链接</a></h4>
-                                    <h4>Github上的个人代码库，超过<a href="github代码行数.html">44,000</a>行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></h4>
+                                    <h4>Github上的个人代码库，超过<a href="github代码行数.html" id="github">44,000</a>行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></h4>
                                     <h4>stackoverflow 上的个人页面，可参见 <a href="https://stackoverflow.com/users/3001445/deng-haijun">链接</a></h4>
                                     <h4>CSDN上的个人博客   <a href="http://blog.csdn.net/hbdhj">链接</a></h4>
         						</div>
