--- a/resume/github代码行数.html
+++ b/resume/github代码行数.html
@@ -6,12 +6,13 @@
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.bundle.js"></script>
+        <script type="text/javascript" src="codeline_data.js"></script>
         <script type="text/javascript" src="codelines.js"></script>
         <title>github上邓海军的代码行数</title>
     </head>
     <body onload="load()">
         <h3 align="center">按主要语言分github上邓海军的代码行数</h3>
-        <h5 align="center">注释与空行已被排除</h5>
+        <h5 align="center" id="totalLines"> 总计_totallines_行，已排除注释与空行, 一些语言未被列出</h5>
         <h5 align="center"><a href="简历.html">回到简历</a></h5>
         <canvas id="codelines"></canvas>
     </body>
