add spirent to resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -95,24 +95,31 @@
         						</div><!--// .yui-u -->
 
         						<div class="yui-u">
+                                    <div class="job">
+        								<h2>Spirent</h2>
+        								<h3>Staff Software Engineer</h3>
+        								<h4>2016.7-NOW</h4>
+        								<p></p>
+        							</div>
+
         							<div class="job">
         								<h2>VIAVI/JDSU</h2>
         								<h3>Senior Software Engineer</h3>
-        								<h4>2011-NOW</h4>
+        								<h4>2011.3-2016.6</h4>
         								<p>Design and implement new component as proxy of 3rd product and new Component as agent between legacy products and new products. Design and implement LDAP support and Sensitive Data Mask in existing products. Implement and trouble-shooting in new component to support XUDT. Porting Code from HP UX to SuSE. Coach and drive interns.</p>
         							</div>
 
         							<div class="job">
         								<h2>Nokia SIEMENS Networks/SIEMENS </h2>
         								<h3>Software Engineer</h3>
-        								<h4>2005-2011</h4>
+        								<h4>2005.7-2011.2</h4>
         								<p>FMC Manual Test and Test Automation based on Robot Framework, HP QTP and Selenium. Design and implement new GUI and Database Proxy for ACI 6.0. Development and trouble-shooting in Sun Cluster Configuration for PCS 2.0. Implement Installation and Configuration scripts for PCS 1.1. Develop Go interface in PCS 1.0.</p>
         							</div>
 
         							<div class="job last">
         								<h2>China Academy of Telecommunication Research</h2>
         								<h3>Engineer</h3>
-        								<h4>2004-2005</h4>
+        								<h4>2004.4-2005.6</h4>
         								<p>Telecommunication network planning and optimization. Network plan and simulation software development.</p>
         							</div>
         						</div><!--// .yui-u -->
