--- a/resume/简历.html
+++ b/resume/简历.html
@@ -95,24 +95,31 @@
         						</div><!--// .yui-u -->
 
         						<div class="yui-u">
+                                    <div class="job">
+        								<h2>思博伦 </h2>
+        								<h3>骨干软件工程师</h3>
+        								<h4>2016.7-现在</h4>
+        								<p></p>
+        							</div>
+
         							<div class="job">
         								<h2>维亚威/捷迪讯 </h2>
         								<h3>高级软件工程师</h3>
-        								<h4>2011-现在</h4>
+        								<h4>2011.3-2016.6</h4>
         								<p>新产品与老产品之间的接口模块的设计与开发， LDAP与敏感信息处理模块的设计与开发，新协议模块的开发与调试，从HP-Unix到Linux的代码移植，外包人员的培训及管理</p>
         							</div>
 
         							<div class="job">
         								<h2>诺基亚西门子网络/西门子通讯</h2>
         								<h3>软件工程师</h3>
-        								<h4>2005-2011</h4>
+        								<h4>2005.7-2011.2</h4>
         								<p>使用Robot Framework, HP QTP 及 Selenium，开发分布式核心网自动化测试框架，开发接入网网管系统的界面和数据库代理系统，开发核心网产品的自动化安装配置脚本，开发相关的协议栈</p>
         							</div>
 
         							<div class="job last">
         								<h2>信息产业部电信研究院</h2>
         								<h3>工程师</h3>
-        								<h4>2004-2005</h4>
+        								<h4>2004.4-2005.6</h4>
         								<p>电信网络的规划及优化，网络规划算法研究，网络规划软件的开发</p>
         							</div>
         						</div><!--// .yui-u -->
