--- a/resume/resume.html
+++ b/resume/resume.html
@@ -99,7 +99,7 @@
         								<h2>Spirent</h2>
         								<h3>Staff Software Engineer</h3>
         								<h4>2016.7-NOW</h4>
-        								<p></p>
+        								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol</p>
         							</div>
 
         							<div class="job">
