--- a/resume/简历.html
+++ b/resume/简历.html
@@ -99,6 +99,7 @@
         								<h2>思博伦 </h2>
         								<h3>骨干软件工程师</h3>
         								<h4>2016.7-现在</h4>
+										<p>开发L2TP、PPP等接入网协议，OSPF、IS-IS路由协议</p>
         								<p></p>
         							</div>
 
