--- a/resume/resume.html
+++ b/resume/resume.html
@@ -66,6 +66,13 @@
         							</ul>
 
         							<ul class="talent">
+        								<li>Openstack</li>
+        								<li>DPDK</li>
+                                        <li>Hadoop</li>
+        								<li class="last">Routing</li>
+        							</ul>
+
+        							<ul class="talent">
         								<li>HP-UX</li>
         								<li>OOP</li>
                                         <li>Shell</li>
