spirent role update

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -104,7 +104,7 @@
         						<div class="yui-u">
                                     <div class="job">
         								<h2>Spirent</h2>
-        								<h3>Staff Software Engineer</h3>
+        								<h3>Staff Software Engineer, Feature Leader</h3>
         								<h4>2016.7-NOW</h4>
         								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol</p>
         							</div>
