--- a/resume/resume.html
+++ b/resume/resume.html
@@ -55,42 +55,40 @@
         								<li>C/C++</li>
         								<li>Large-Scale</li>
                                         <li>Agile/TDD</li>
-        								<li class="last">ClearCase</li>
+        								<li>IPC</li>
+                                    	<li class="last">ClearCase</li>
         							</ul>
 
         							<ul class="talent">
         								<li>Linux</li>
-        								<li>IPC</li>
-                                        <li>Python</li>
+        							    <li>Python</li>
+        								<li>DPDK</li>
+                                        <li>Hadoop</li>
         								<li class="last">Test Automation</li>
         							</ul>
 
         							<ul class="talent">
+        								<li>OOP</li>
+                                        <li>Shell</li>
+        								<li>HP-UX</li>
         								<li>Openstack</li>
-        								<li>DPDK</li>
-                                        <li>Hadoop</li>
         								<li class="last">Routing</li>
         							</ul>
 
         							<ul class="talent">
-        								<li>HP-UX</li>
-        								<li>OOP</li>
-                                        <li>Shell</li>
+        								<li>Network</li>
+        								<li>Solaris</li>
+        								<li>Scrum</li>
+                                        <li>git</li>
         								<li class="last">Makefile</li>
         							</ul>
 
                                     <ul class="talent">
-        								<li>Solaris</li>
-        								<li>Scrum</li>
-                                        <li>git</li>
-        								<li class="last">spring framework</li>
-        							</ul>
-
-                                    <ul class="talent">
-        								<li>Network</li>
         								<li>MySQL</li>
                                         <li>gdb</li>
-        								<li class="last">Java</li>
+        							    <li>Java</li>
+        							    <li>Boost</li>
+        								<li class="last">spring framework</li>
         							</ul>
         						</div>
         					</div><!--// .yui-gf-->
