update resume again

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -104,7 +104,7 @@
         								<h2>Spirent</h2>
         								<h3>Staff Software Engineer, Feature Leader</h3>
         								<h4>2016.7-NOW</h4>
-        								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol</p>
+        								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol. NFVi Stats investigation. DevOps issues.</p>
         							</div>
 
         							<div class="job">
@@ -151,7 +151,7 @@
                                     <h4>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></h4>
                                     <h4>Repositories on Github, over <a href="github-code.html" id="github">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h4>
                                     <h4>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></h4>
-                                    <h4>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h4>
+                                    <h4>Personal Blog on CSDN(Chinese), refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h4>
         						</div>
         					</div><!--// .yui-gf -->
                             <div class="yui-gf last">
