update code line counted by cloc

--- a/resume/github-code.html
+++ b/resume/github-code.html
@@ -10,7 +10,7 @@
     </head>
     <body onload="load()">
         <h3 align="center">lines of Haijun Deng's code on github by language </h3>
-        <h5 align="center" id="totalLines">_totallines_ lines of code in total, comments and blank lines <i>NOT</i> included, some languages not listed</h5>
+        <h5 align="center" id="totalLines">_totallines_ lines of code in total, comments and blank lines <i>NOT</i> included, some languages not listed, counted by cloc</h5>
         <h5 align="center"><a href="resume.html">Back to resume</a></h5>
         <canvas id="codelines"></canvas>
     </body>
