--- a/resume/github代码行数.html
+++ b/resume/github代码行数.html
@@ -12,7 +12,7 @@
     </head>
     <body onload="load()">
         <h3 align="center">按主要语言分github上邓海军的代码行数</h3>
-        <h5 align="center" id="totalLines"> 总计_totallines_行，已排除注释与空行, 一些语言未被列出</h5>
+        <h5 align="center" id="totalLines"> 总计_totallines_行，已排除注释与空行, 一些语言未被列出, 通过cloc统计</h5>
         <h5 align="center"><a href="简历.html">回到简历</a></h5>
         <canvas id="codelines"></canvas>
     </body>
