update graphcore part

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -18,7 +18,7 @@
         			<div class="yui-gc">
         				<div class="yui-u first">
         					<h1>Haijun Deng</h1>
-        					<h2>Senior Software Engineer</h2>
+        					<h2>Senior Product Manager</h2>
         					<h2>Birth: Sept. 1979</h2>
         				</div>
 
@@ -41,7 +41,7 @@
         						</div>
         						<div class="yui-u">
         							<p class="enlarge">
-        								8+ years C/C++ programing on Unix-like system. 5+ years development on large-scale distributed system(>100 nodes). Proficient in python and other scripts. Fimiliar with telecommunication network and protocols. Good understanding on data structure and algorithm. Fluent English and strong self-study skills.
+        								One year on AI product Management. Two years on customer project management of Field engineering team. Three years in AI startup - Graphcore. Four year technical project management. Ten years SW development.
         							</p>
         						</div>
         					</div><!--// .yui-gf -->
@@ -51,44 +51,31 @@
         							<h2>Technical</h2>
         						</div>
         						<div class="yui-u">
-        							<ul class="talent">
-        								<li>C/C++</li>
-        								<li>Large-Scale</li>
-                                        <li>Agile/TDD</li>
-        								<li>IPC</li>
-                                    	<li class="last">ClearCase</li>
-        							</ul>
-
-        							<ul class="talent">
-        								<li>Linux</li>
-        							    <li>Python</li>
-        								<li>DPDK</li>
-                                        <li>Hadoop</li>
-        								<li class="last">Test Automation</li>
-        							</ul>
-
-        							<ul class="talent">
-        								<li>OOP</li>
-                                        <li>Shell</li>
-        								<li>HP-UX</li>
-        								<li>Openstack</li>
-        								<li class="last">Routing</li>
-        							</ul>
-
-        							<ul class="talent">
-        								<li>Network</li>
-        								<li>Solaris</li>
-        								<li>Scrum</li>
-                                        <li>git</li>
-        								<li class="last">Makefile</li>
-        							</ul>
-
-                                    <ul class="talent">
-        								<li>MySQL</li>
-                                        <li>gdb</li>
-        							    <li>Java</li>
-        							    <li>Boost</li>
-        								<li class="last">spring framework</li>
+									<div class="yui-u">
+										<ul class="talent">
+											<li>LLM</li>
+											<li>Transformer and other models</li>
+											<li class="last">DL Framework</li>
+										</ul>
+	
+										<ul class="talent">
+											<li>C/C++</li>
+											<li>Java</li>
+											<li class="last">python</li>
+										</ul>
+	
+										<ul class="talent">
+											<li>HPC</li>
+											<li>PCIe</li>
+											<li class="last">High Speed Etherent</li>
+										</ul>
+	
+										<ul class="talent">
+											<li>Market Analyze</li>
+											<li>Project Management</li>
+											<li class="last">Product Management</li>
+										</ul>
+									</div>
         							</ul>
         						</div>
         					</div><!--// .yui-gf-->
@@ -101,9 +88,32 @@
 
         						<div class="yui-u">
                                     <div class="job">
+        								<h2>Graphcore </h2>
+        								<h3>Senior Product Manager</h3>
+        								<h4>2023.6-2023.11</h4>
+										<p>Track the latest status of AI tech，forge the requirement of products. Collect market info, study compitators' status explore niche market and deliver market report. Communicate with customers and share product roadmap, features and performance report, collect customers' requirement, feedback and concerns</p>
+        								<p></p>
+        							</div>
+
+        							<div class="job">
+        								<h2>Graphcore </h2>
+        								<h3>Customer Project Manager in Field Engineering team</h3>
+        								<h4>2021.9-2023.5</h4>
+										<p>Communicate with customers and manage the project: collect customers' feedback, summarize the task status, analyze the risks, orgnize tech meetings. Communicate with internal teams, allocate resources and solve problems/blockings.</p>
+        								<p></p>
+        							</div>
+
+        							<div class="job">
+        								<h2>Spirent</h2>
+        								<h3>Project Manager - Scrum master in dev team</h3>
+        								<h4>2020.1-2021.8</h4>
+        								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol. NFVi Stats investigation. DevOps issues.</p>
+        							</div>
+
+        							<div class="job">
         								<h2>Spirent</h2>
         								<h3>Staff Software Engineer, Feature Leader</h3>
-        								<h4>2016.7-NOW</h4>
+        								<h4>2016.7-2019.12</h4>
         								<p>Develop L2TP, PPP access network protocol, OSPF, IS-IS routing protocol. NFVi Stats investigation. DevOps issues.</p>
         							</div>
 
