--- a/resume/简历.html
+++ b/resume/简历.html
@@ -18,7 +18,7 @@
         			<div class="yui-gc">
         				<div class="yui-u first">
         					<h1>邓海军</h1>
-        					<h2>高级软件工程师</h2>
+        					<h2>高级产品经理</h2>
         					<h2>出生年月：1979年9月</h2>
         				</div>
 
@@ -41,7 +41,7 @@
         						</div>
         						<div class="yui-u">
         							<p class="enlarge">
-        								八年Linux/HP-Unix/Solaris C/C++商业软件开发经验，五年大型分布式系统开发经验(>100 节点)，三年Python及脚本开发经验，精通电信网络结构及协议，熟悉数据结构及算法，学习能力强
+        								一年产品经理经验，两年客户项目经理经验，三年AI相关经验，五年项目管理经验，十年软件开发经验
         							</p>
         						</div>
         					</div><!--// .yui-gf -->
@@ -52,38 +52,27 @@
         						</div>
         						<div class="yui-u">
         							<ul class="talent">
+        								<li>LLM和生成模型</li>
+        								<li>Transformer和其他DL模型</li>
+                                        <li class="last">深度学习框架</li>
+        							</ul>
+
+        							<ul class="talent">
         								<li>C/C++</li>
-        								<li>Large-Scale</li>
-                                        <li>Agile/TDD</li>
-        								<li class="last">ClearCase</li>
+        								<li>Java</li>
+                                        <li class="last">python</li>
         							</ul>
 
         							<ul class="talent">
-        								<li>Linux</li>
-        								<li>IPC</li>
-                                        <li>Python</li>
-        								<li class="last">Test Automation</li>
-        							</ul>
-
-        							<ul class="talent">
-        								<li>HP-UX</li>
-        								<li>OOP</li>
-                                        <li>Shell</li>
-        								<li class="last">Makefile</li>
+        								<li>HPC</li>
+        								<li>PCIe</li>
+                                    	<li class="last">High Speed Etherent</li>
         							</ul>
 
                                     <ul class="talent">
-        								<li>Solaris</li>
-        								<li>Scrum</li>
-                                        <li>git</li>
-        								<li class="last">spring framework</li>
-        							</ul>
-
-                                    <ul class="talent">
-        								<li>Network</li>
-        								<li>MySQL</li>
-                                        <li>gdb</li>
-        								<li class="last">Java</li>
+        								<li>Market Analyze</li>
+        								<li>Project Management</li>
+                                        <li class="last">Product Management</li>
         							</ul>
         						</div>
         					</div><!--// .yui-gf-->
@@ -96,9 +85,33 @@
 
         						<div class="yui-u">
                                     <div class="job">
+        								<h2>拟未 </h2>
+        								<h3>高级产品经理</h3>
+        								<h4>2023.6-2023.11</h4>
+										<p>跟踪AI技术发展，形成未来客户对产品的需求。搜集市场信息，研究竞品信息，探索细分市场，形成市场研究文档。与客户交流，分享产品特性，收集客户需求，分析客户关切，形成客户需求文档</p>
+        								<p></p>
+        							</div>
+
+        							<div class="job">
+        								<h2>拟未 </h2>
+        								<h3>客户项目经理</h3>
+        								<h4>2021.9-2023.5</h4>
+										<p>与客户定期沟通，管理客户项目，收集客户意见，整理任务进展，分析项目风险，组织方案讨论。与内部多个团队及时沟通，协调内部资源，解决客户项目挑战</p>
+        								<p></p>
+        							</div>
+
+        							<div class="job">
+        								<h2>思博伦 </h2>
+        								<h3>开发团队项目经理</h3>
+        								<h4>2020.1-2021.8</h4>
+										<p>开发L2TP、PPP等接入网协议，OSPF、IS-IS路由协议</p>
+        								<p></p>
+        							</div>
+
+        							<div class="job">
         								<h2>思博伦 </h2>
         								<h3>骨干软件工程师</h3>
-        								<h4>2016.7-现在</h4>
+        								<h4>2016.7-2019.12</h4>
 										<p>开发L2TP、PPP等接入网协议，OSPF、IS-IS路由协议</p>
         								<p></p>
         							</div>
